[gd_scene load_steps=22 format=3 uid="uid://c8kw4vdik224r"]

[ext_resource type="Script" path="res://scenes/Enemies/minhocao/minhocao.gd" id="1_qy00g"]
[ext_resource type="Texture2D" uid="uid://cvp7nhsrqx2al" path="res://assets/sprites/MinhocaoAtaque.png" id="2_2c4qe"]
[ext_resource type="Texture2D" uid="uid://bl7g0cq8bo1ku" path="res://assets/sprites/Minhocao_Andar_Invertido (1).png" id="3_s56hy"]
[ext_resource type="PackedScene" uid="uid://dwpf8re4uiwwh" path="res://scenes/Killzone/killzone.tscn" id="4_y2f8r"]


[sub_resource type="AtlasTexture" id="AtlasTexture_vx2px"]
atlas = ExtResource("2_2c4qe")
region = Rect2(0, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rnla"]
atlas = ExtResource("2_2c4qe")
region = Rect2(50, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmhsf"]
atlas = ExtResource("2_2c4qe")
region = Rect2(100, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u3u6"]
atlas = ExtResource("2_2c4qe")
region = Rect2(150, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fixiq"]
atlas = ExtResource("2_2c4qe")
region = Rect2(200, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjqua"]
atlas = ExtResource("2_2c4qe")
region = Rect2(250, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eciy"]
atlas = ExtResource("2_2c4qe")
region = Rect2(300, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lm8q"]
atlas = ExtResource("2_2c4qe")
region = Rect2(350, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoyh1"]
atlas = ExtResource("2_2c4qe")
region = Rect2(400, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pj3n"]
atlas = ExtResource("2_2c4qe")
region = Rect2(450, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_uem4a"]
atlas = ExtResource("2_2c4qe")
region = Rect2(500, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_37vrg"]
atlas = ExtResource("2_2c4qe")
region = Rect2(550, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_28tty"]
atlas = ExtResource("2_2c4qe")
region = Rect2(600, 0, 42, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_csnto"]
atlas = ExtResource("3_s56hy")
region = Rect2(9, 4, 40, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oasm"]
atlas = ExtResource("3_s56hy")
region = Rect2(58, 4, 40, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_uylv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx2px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rnla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmhsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u3u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fixiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjqua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eciy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lm8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoyh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pj3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uem4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37vrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28tty")
}],
"loop": true,
"name": &"Ataque",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_csnto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oasm")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo10g"]
size = Vector2(26.4375, 22.375)

[node name="Minhocao" type="Node2D" groups=["inimigos"]]
visibility_layer = 3
position = Vector2(0, -12)
script = ExtResource("1_qy00g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 3)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_uylv8")
animation = &"run"
autoplay = "run"
frame_progress = 0.0561269

[node name="Killzone" parent="." instance=ExtResource("4_y2f8r")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wo10g")

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(9, 0)

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(3, 7)
target_position = Vector2(0, 8)

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(-1, -1)
target_position = Vector2(15, 0)
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="." groups=["inimigos"]]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wo10g")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
